fix: menu item spacing adjusted, cleaned css code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,51 +4,44 @@
 
 
 /* NAVIGATION */
+
 /* left side of navifation items */
-
-
 .nav-left{
 float: left;
 text-align: right;
-padding-top: 40px;
-
+padding-top: 50px;
 }
 
 /* right side of navigation items */
-
 .nav-right{
     float: right;
-    text-align: left;
-    padding-top: 40px;
-    
-
+    padding-top: 50px;
 }
 
 /* all navigation items */
 
 #nav{
-    margin: 0 auto;
-    width: 100%;
     position: relative;
 }
 #nav ul li a{
     text-decoration: none;
     text-transform: uppercase;
+    font-size: 1.25rem;
     color: #000;
 }
 #nav ul li a:hover{
-    color: rgb(95, 95, 95);
+    color: #ff9df7;
 }
+
 .menu-item{
-    padding: 0 20px;
+    margin: 0 40px;
 }
 
 
-/* logo */
+/* logo part in navigation row */
 
 .nav-logo{
     background: url(../img/mr-s-logo.jpg) no-repeat center center / cover;
-    padding: 0;
     width: 150px;
     height: 150px;
     border-radius: 50%;
